There seems to be an issue with the browser thinking this div is overflowing when it's not, so set overflow to hidden because we never want scrollbars directly on this div anyway.

--- a/src/css/course-info.scss
+++ b/src/css/course-info.scss
@@ -1,5 +1,5 @@
 .course-info {
-  height: 100%;
+  overflow: hidden;
   table {
     max-width: 300px;
   }
